--- a/2_projeto/index.html
+++ b/2_projeto/index.html
@@ -9,11 +9,20 @@
   <body>
     <header class="cabeçalho">
       <h1 class="main-title">BLOODSHED</h1>
+       <div class="card-container">
+  <div class="card">
+    <div class="card-front">
+      <img src="imgs/bloodshed-1.webp" alt="Bloodshed Frente" />
+    </div>
+    <div class="card-back">
+      <img src="imgs/bloodshed-2.webp" alt="Bloodshed Verso" />
     </header>
     <main>
-      <figure class="figure">
-        <img src="imgs/bloodshed-1.webp" alt="" class="bloodshed-1" />
-      </figure>
+     
+    </div>
+  </div>
+</div>
+
       <div class="articles">
         <article class="biografia">
           <h2 class="ajusta">BLOODSHED</h2>
